--- a/fronted/src/index.css
+++ b/fronted/src/index.css
@@ -94,6 +94,7 @@
     flex-direction: column;
     align-items: center;
     padding: 20px;
+    justify-content: center;
     background-color: #f0f0f0;
     min-height: 100vh;
   }
@@ -107,7 +108,12 @@
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 300px;
+    width: 600px;
+  }
+  @media only screen and (max-width: 600px) {
+    .admin-form {
+      width: 320px;
+    }
   }
   
   .input-group {
