Fix All Bugs like Email send and Blog page

--- a/fronted/src/App.css
+++ b/fronted/src/App.css
@@ -225,7 +225,7 @@ a:hover {
   width: 40px;
   font-size: 1.2rem;
   border-radius: 50%;
-  line-height: 1.6;
+  line-height: 40px;
   margin: 0 15px 0 0;
   box-shadow: 0 0 0 3px #0078ff;
   transition: all 500ms ease;
@@ -824,6 +824,13 @@ a:hover {
 .about-mf .box-shadow-full {
   padding-top: 4rem;
   padding-bottom: 4rem;
+}
+
+@media only screen and (max-width: 500px) {
+  .about-mf .box-shadow-full {
+    padding-top: 1rem;
+    padding-bottom: 4rem;
+  }
 }
 
 .about-mf .about-img {
