Changes made in content

--- a/fronted/src/App.css
+++ b/fronted/src/App.css
@@ -832,6 +832,10 @@ a:hover {
     padding-bottom: 4rem;
   }
 }
+.lead
+{
+  font-size:medium;
+}
 
 .about-mf .about-img {
   margin-bottom: 2rem;
